--- a/Book/src/main/webapp/style.css
+++ b/Book/src/main/webapp/style.css
@@ -1,73 +1,80 @@
 @charset "UTF-8";
 
-* {
-	margin: 0;
-	padding: 0;
-}
+	* {
+		margin: 0;
+		padding: 0;
+	}
 
-body {
-	overflow: hidden;
-}
-
-header {
-	top: 0;
-	width: 100%;
+    body{        
+        padding-top: 60px;
+        padding-bottom: 40px;
+    }
+    
+    header {
 	text-align: center;
-	background: #7884F1;
-	color: black;
-	height: 150px;
-	line-height: 150px;
-	font-size: 100px;
+	font-size: 90px;
 	font-weight: bold;
-}
+	}
+	
+	img {
+	margin: auto;
+    display: block;
+    width: 40%;
+    padding-top: 200px;
+	}
 
-nav ul {
-	height: 50px;
-	line-height: 50px;
-	width: 100%;
+    .container{
+        margin: 100px;
+        text-align: center;
+    }
+    
+    .fixed-header, .fixed-footer{
+        width: 100%;
+        position: fixed;        
+        background:#7884F1;
+        color: black;
+    }
+    
+    .fixed-header{
+        top: 0;
+    }
+    
+    .fixed-footer{
+        bottom: 0;
+        text-align: center;
+        font-size: 50px;
+		font-weight: bold;
+    }
+    
+    nav ul {
 	background: #AADEEE;
 	color: black;
 	text-align: center;
-}
+	}
 
-nav ul li {
+	nav ul li {
 	list-style: none;
-	padding: 0 60px;
+	padding: 0 30px;
 	display: inline-block;
 	font-weight: bold;
-	font-size: 25px;
-}
+	font-size: 30px;
+	}   
 
-section {
-	position: absolute;
-	overflow: auto;
-	width: 100%;
-	height: 100%;
-	background: white;
-}
-
-a {
-	text-decoration: none;
-}
-
-a:hover {
-	cursor: pointer;
-}
-
-img {
-	margin: auto;
-    display: block;
-    padding: 100px;
-    width: 40%;
-}
-
-caption {
+    nav a{
+        text-decoration: none;
+    }
+	
+	a:hover {
+		cursor: pointer;
+	}
+	
+	caption {
 	font-size: 70px;
 	margin-top: 20px;
 	text-align: center;
-}
-
-table {
+	}
+    
+    table {
 	padding-top: 50px;
 	background: #D7F4B1;
 	margin-left:auto; 
@@ -75,96 +82,91 @@ table {
     border-collapse: collapse;
 	font-size: 20px;
 	width: 50%;
-}
-
-.booklist{
+    }
+	
+	.booklist{
 	font-size: 15px;
 	width: 80%;
 	height: 90%;
-}
-
-.wap {
-	border-collapse: collapse;
-	width: 80%;
-	height: 80%;
-}
-
-.buyList {	
-	border-collapse: collapse;
-	width: 80%;
-	height: 80%;
-}
-
-
-
-.bar {
+	}
+	
+	.wap {
+		border-collapse: collapse;
+		width: 80%;
+		height: 80%;
+	}
+	
+	.buyList {	
+		border-collapse: collapse;
+		width: 80%;
+		height: 80%;
+	}
+	
+	.bar {
 	border-bottom: 2px solid #86CC2C;
-}
-
-tr, td, th {
+	}
+	
+	tr, td, th {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	padding: 10px;
-}
-
-th{
-	width: 20%;
-}
-
-.list{
-	width: 20%;
-	padding: 0;
-}
-
-input {
-	height: 30px;
-	width: 300px;
-}
-
-b {
-	margin-left: 10px; 
-}
-
-.count {
-	margin-left: 5px;
-	height: 30px;
-	width: 80px;
-}
-
-.btn {
-	padding: 0.4rem 1rem;
-	border-radius: 0.4rem;
-	font-size: 20px;
-	margin-left: 20px;
-	text-align: center;
-}
-
-.orderbtn {
-	padding: 0.4rem 1rem;
-	border-radius: 0.4rem;
-	font-size: 20px;
-	text-align: center;
+	}
 	
-}
-
-select {
-	width: 500px; 
-	padding: .8em .5em; 
-	border: 1px solid #999;
-	font-family: inherit;  
-	border-radius: 0px;
-}
-
-footer {
-	position: fixed;
-	bottom: 0;
-	width: 100%;
-	text-align: center;
-	background: #7884F1;
-	color: black;
-	height: 100px;
-	line-height: 100px;
-	font-size: 80px;
-	font-weight: bold;
-}
+	th{
+		width: 20%;
+	}
+	
+	.list{
+		width: 20%;
+		padding: 0;
+	}
+	
+	input {
+		height: 30px;
+		width: 300px;
+	}
+	
+	.count {
+		margin-left: 5px;
+		height: 30px;
+		width: 80px;
+	}
+	
+	.btn {
+		padding: 0.4rem 1rem;
+		border-radius: 0.4rem;
+		font-size: 20px;
+		margin-left: 20px;
+		text-align: center;
+	}
+	
+	.orderbtn {
+		padding: 0.4rem 1rem;
+		border-radius: 0.4rem;
+		font-size: 20px;
+		text-align: center;
+		
+	}
+	
+	select {
+		padding: .8em .5em; 
+		border: 1px solid #999;
+		font-family: inherit;  
+		border-radius: 0px;
+	}
+	
+	.total {
+		font-weight: bold;
+		font-size: 20px;
+	}
+	
+	.like {	
+		width: 10%;
+		padding: 0;
+		margin: 0;
+	}
+	
+	.like:hover {
+		cursor: pointer;
+	}
